fixes positioning issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,7 @@ h1 {
 #icon {
   position: relative;
   bottom: 50px;
+  right: 25px;
 }
 #current-temp {
   font-size: 90px;
